Add Marketplace icon (icon.png) and reference in package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A companion extension for the AI First Programming book series that provides easy access to book examples, prompts, and code responses. Includes a Language Model Chat Provider that returns exact code examples from the books.",
   "version": "0.0.1",
   "publisher": "aifirstprogramming",
+  "icon": "icon.png",
   "engines": {
     "vscode": "^1.102.0"
   },
